# ocaml-cfgen

./: LICENSE.md  README.md  cf_base.opam  cfgen.opam  dune  dune-project  flake.nix  generate.ml
.github/workflows/: doc.yml
cfbase/: attributes.ml  cf_base.ml  cf_base.mli  cfbase.ml  dune  stack.ml  stack.mli  template.ml  template.mli  token_map.ml  token_map.mli  util.ml
definitions/: ACMPCACertificateAuthorityActivationSpecification.json  ACMPCACertificateAuthoritySpecification.json  ACMPCACertificateSpecification.json  ACMPCAPermissionSpecification.json  APSRuleGroupsNamespaceSpecification.json  APSWorkspaceSpecification.json  ARCZonalShiftZonalAutoshiftConfigurationSpecification.json  ASKSkillSpecification.json  AccessAnalyzerAnalyzerSpecification.json  AmazonMQBrokerSpecification.json  AmazonMQConfigurationAssociationSpecification.json  AmazonMQConfigurationSpecification.json  AmplifyAppSpecification.json  AmplifyBranchSpecification.json  AmplifyDomainSpecification.json  AmplifyUIBuilderComponentSpecification.json  AmplifyUIBuilderFormSpecification.json  AmplifyUIBuilderThemeSpecification.json  ApiGatewayAccountSpecification.json  ApiGatewayApiKeySpecification.json  ApiGatewayAuthorizerSpecification.json  ApiGatewayBasePathMappingSpecification.json  ApiGatewayClientCertificateSpecification.json  ApiGatewayDeploymentSpecification.json  ApiGatewayDocumentationPartSpecification.json  ApiGatewayDocumentationVersionSpecification.json  ApiGatewayDomainNameSpecification.json  ApiGatewayGatewayResponseSpecification.json  ApiGatewayMethodSpecification.json  ApiGatewayModelSpecification.json  ApiGatewayRequestValidatorSpecification.json  ApiGatewayResourceSpecification.json  ApiGatewayRestApiSpecification.json  ApiGatewayStageSpecification.json  ApiGatewayUsagePlanKeySpecification.json  ApiGatewayUsagePlanSpecification.json  ApiGatewayV2ApiGatewayManagedOverridesSpecification.json  ApiGatewayV2ApiMappingSpecification.json  ApiGatewayV2ApiSpecification.json  ApiGatewayV2AuthorizerSpecification.json  (+1166 more)
definitions/resources/AWS/: ACMPCA.ml  APS.ml  AccessAnalyzer.ml  AmazonMQ.ml  Amplify.ml  AmplifyUIBuilder.ml  ApiGateway.ml  ApiGatewayV2.ml  AppConfig.ml  AppFlow.ml  AppIntegrations.ml  AppMesh.ml  AppRunner.ml  AppStream.ml  AppSync.ml  ApplicationAutoScaling.ml  ApplicationInsights.ml  Athena.ml  AuditManager.ml  AutoScaling.ml  AutoScalingPlans.ml  Backup.ml  Batch.ml  BillingConductor.ml  Budgets.ml  CE.ml  CUR.ml  Cassandra.ml  CertificateManager.ml  Chatbot.ml  Cloud9.ml  CloudFormation.ml  CloudFront.ml  CloudTrail.ml  CloudWatch.ml  CodeArtifact.ml  CodeBuild.ml  CodeCommit.ml  CodeDeploy.ml  CodeGuruProfiler.ml  (+173 more)
definitions/resources/Alexa/: ASK.ml
doc/: background.mld  dune  index.mld  tutorial.mld  usage.mld
examples/: dune  lambda.ml
examples/framework/: dune  framework.ml
examples/lambda/: dune  lambda.ml
generate/: attributes.ml  complex.ml  dune  generate.ml  primitives.ml  symbol_utils.ml  write_specs.ml
lib/: attributes.ml  cfgen.ml  cfgen.mli  dune  iam_policy.ml  intrinsics.ml  template.ml  template.mli  token_map.ml  util.ml
misc/: dune  misc.ml
parse/: dune  parse.ml  specification.ml
specs/: dune  write_specs.ml
specs/generate/: attributes.ml  dune  generate.ml  primitives.ml  property_specifications.ml  symbol_utils.ml
write_specs/: dune  write_defs.ml  write_specs.ml
write_specs/specs/: dune  load.ml  specs.ml  util.ml
