(env
 (dev
  (flags
   (:standard
    -warn-error
    -26
    -w
    -30
    ;-w -50 ; documentation ambiguous
    -w
    -33 ; unused open
    -w
    -39 ; unused rec flag
    ))))

(rule
 (alias resources)
 (targets
  Cf_aws.ml
  Cf_alexa.ml
  ACMPCA.ml
  ARCZonalShift.ml
  APS.ml
  AccessAnalyzer.ml
  AmazonMQ.ml
  Amplify.ml
  AmplifyUIBuilder.ml ; recursive types not handled in from_yojson_to converters
  ApiGateway.ml
  ApiGatewayV2.ml
  AppConfig.ml
  AppFlow.ml
  AppIntegrations.ml
  AppMesh.ml
  AppRunner.ml
  AppStream.ml
  AppSync.ml
  ApplicationAutoScaling.ml
  ApplicationInsights.ml
  Athena.ml
  AuditManager.ml
  AutoScaling.ml
  AutoScalingPlans.ml
  B2BI.ml
  Backup.ml
  BackupGateway.ml
  Batch.ml
  BillingConductor.ml
  Budgets.ml
  CE.ml
  CUR.ml
  Cassandra.ml
  CertificateManager.ml
  Chatbot.ml
  CleanRooms.ml
  Cloud9.ml
  CloudFormation.ml
  CloudFront.ml
  CloudTrail.ml
  CloudWatch.ml
  CodeArtifact.ml
  CodeBuild.ml
  CodeCommit.ml
  CodeDeploy.ml
  CodeGuruProfiler.ml
  CodeGuruReviewer.ml
  CodePipeline.ml
  CodeStar.ml
  CodeStarConnections.ml
  CodeStarNotifications.ml
  Cognito.ml
  Comprehend.ml
  Config.ml
  Connect.ml
  ConnectCampaigns.ml
  ControlTower.ml
  CustomerProfiles.ml
  DAX.ml
  DLM.ml
  DMS.ml
  DataBrew.ml
  DataPipeline.ml
  DataSync.ml
  DataZone.ml
  Detective.ml
  DevOpsGuru.ml
  DirectoryService.ml
  DocDB.ml
  DocDBElastic.ml
  DynamoDB.ml
  EC2.ml
  ECR.ml
  ECS.ml
  EFS.ml
  EKS.ml
  EMR.ml
  EMRContainers.ml
  EMRServerless.ml
  ElastiCache.ml
  ElasticBeanstalk.ml
  ElasticLoadBalancing.ml
  ElasticLoadBalancingV2.ml
  Elasticsearch.ml
  EntityResolution.ml
  EventSchemas.ml
  Events.ml
  Evidently.ml
  FIS.ml
  FMS.ml
  FSx.ml
  FinSpace.ml
  Forecast.ml
  FraudDetector.ml
  GameLift.ml
  GlobalAccelerator.ml
  Glue.ml
  Grafana.ml
  Greengrass.ml
  GreengrassV2.ml
  GroundStation.ml
  GuardDuty.ml
  HealthLake.ml
  HealthImaging.ml
  IAM.ml
  IVS.ml
  IVSChat.ml
  IdentityStore.ml
  ImageBuilder.ml
  Inspector.ml
  InspectorV2.ml
  InternetMonitor.ml
  IoT.ml
  IoT1Click.ml
  IoTAnalytics.ml
  IoTCoreDeviceAdvisor.ml
  IoTEvents.ml
  IoTFleetHub.ml
  IoTFleetWise.ml
  IoTSiteWise.ml
  IoTThingsGraph.ml
  IoTTwinMaker.ml
  IoTWireless.ml
  KMS.ml
  KafkaConnect.ml
  Kendra.ml
  KendraRanking.ml
  Kinesis.ml
  KinesisAnalytics.ml
  KinesisAnalyticsV2.ml
  KinesisFirehose.ml
  KinesisVideo.ml
  LakeFormation.ml
  Lambda.ml
  Lex.ml
  LicenseManager.ml
  Lightsail.ml
  Location.ml
  Logs.ml
  LookoutEquipment.ml
  LookoutMetrics.ml
  LookoutVision.ml
  M2.ml
  MSK.ml
  MWAA.ml
  Macie.ml
  ManagedBlockchain.ml
  MediaConnect.ml
  MediaConvert.ml
  MediaLive.ml
  MediaPackage.ml
  MediaPackageV2.ml
  MediaStore.ml
  MediaTailor.ml
  MemoryDB.ml
  Neptune.ml
  NeptuneGraph.ml
  NetworkFirewall.ml
  NetworkManager.ml
  NimbleStudio.ml
  OSIS.ml
  Oam.ml
  Omics.ml
  OpenSearchServerless.ml
  OpenSearchService.ml
  OpsWorks.ml
  OpsWorksCM.ml
  Organizations.ml
  PCAConnectorAD.ml
  Panorama.ml
  Personalize.ml
  Pinpoint.ml
  PinpointEmail.ml
  Pipes.ml
  Proton.ml
  QLDB.ml
  QuickSight.ml
  RAM.ml
  RDS.ml
  RUM.ml
  Redshift.ml
  RedshiftServerless.ml
  RefactorSpaces.ml
  Rekognition.ml
  ResilienceHub.ml
  ResourceExplorer2.ml
  ResourceGroups.ml
  RoboMaker.ml
  RolesAnywhere.ml
  Route53.ml
  Route53RecoveryControl.ml
  Route53RecoveryReadiness.ml
  Route53Resolver.ml
  S3.ml
  S3Express.ml
  S3ObjectLambda.ml
  S3Outposts.ml
  SDB.ml
  SES.ml
  SNS.ml
  SQS.ml
  SSM.ml
  SSMContacts.ml
  SSMIncidents.ml
  SSO.ml
  SageMaker.ml
  Scheduler.ml
  SecretsManager.ml
  SecurityHub.ml
  ServiceCatalog.ml
  ServiceCatalogAppRegistry.ml
  ServiceDiscovery.ml
  Shield.ml
  Signer.ml
  SimSpaceWeaver.ml
  StepFunctions.ml
  SupportApp.ml
  Synthetics.ml
  SystemsManagerSAP.ml
  Timestream.ml
  Transfer.ml
  VerifiedPermissions.ml
  VoiceID.ml
  VpcLattice.ml
  WAF.ml
  WAFRegional.ml
  WAFv2.ml ; recursive types not handled in from_yojson_to converters
  Wisdom.ml
  WorkSpaces.ml
  WorkSpacesWeb.ml
  WorkSpacesThinClient.ml
  XRay.ml
  ; Alexa
  ASK.ml)
 (deps
  (sandbox always)
  (:jsonfiles
   (glob_files "../definitions/*.json")))
 (action
  (run ../write_specs/write_specs.exe %{jsonfiles})))

(library
 (name cfgen)
 (public_name cfgen)
 (libraries fmt yojson str)
 (preprocess
  (pps ppx_expect)))
