(executable
 (name write_specs)
 (public_name write_specs)
 (modules write_specs)
 (libraries generate parse containers fmt))

(env
 (dev
  (flags
   (:standard
    -warn-error
    -26
    -w
    -30
    ;-w -50 ; documentation ambiguous
    -w
    -33 ; unused open
    -w
    -39 ; unused rec flag
    ))))

(rule
 (alias resources)
 (targets Cf_aws.ml Cf_alexa.ml
  ApplicationAutoScaling.ml
  ECR.ml
  Location.ml
  ServiceCatalogAppRegistry.ml
  Lambda.ml
  OpenSearchServerless.ml
  FMS.ml
  LakeFormation.ml
  MediaConnect.ml
  KendraRanking.ml
  MediaLive.ml
  Transfer.ml
  Comprehend.ml
  Batch.ml
  Amplify.ml
  IoTFleetWise.ml
  S3ObjectLambda.ml
  Signer.ml
  IoTWireless.ml
  AppConfig.ml
  DocDBElastic.ml
  IoT.ml
  Cognito.ml
  EMRServerless.ml
  Grafana.ml
  MediaConvert.ml
  StepFunctions.ml
  Synthetics.ml
  KinesisAnalytics.ml
  ControlTower.ml
  DMS.ml
  ElasticLoadBalancing.ml
  Logs.ml
  SES.ml
  DAX.ml
  IoTTwinMaker.ml
  OpsWorks.ml
  GroundStation.ml
  ManagedBlockchain.ml
  Personalize.ml
  AppFlow.ml
  CodeArtifact.ml
  CloudFront.ml
  Omics.ml
  Scheduler.ml
  SupportApp.ml
  CodeGuruReviewer.ml
  LicenseManager.ml
  SecurityHub.ml
  AppRunner.ml
  IoTSiteWise.ml
  Inspector.ml
  SageMaker.ml
  CE.ml
  MediaTailor.ml
  Athena.ml
  QLDB.ml
  S3Outposts.ml
  GlobalAccelerator.ml
  Kinesis.ml
  Route53Resolver.ml
  RAM.ml
  APS.ml
  Cassandra.ml
  Organizations.ml
  KinesisFirehose.ml
  MediaStore.ml
  WorkSpaces.ml
  EC2.ml
  LookoutEquipment.ml
  GameLift.ml
  Pinpoint.ml
  WAFv2.ml ; recursive types not handled in from_yojson_to converters
  DataSync.ml
  Glue.ml
  Evidently.ml
  Oam.ml
  Rekognition.ml
  NetworkFirewall.ml
  SDB.ml
  DocDB.ml
  PinpointEmail.ml
  AuditManager.ml
  InspectorV2.ml
  KinesisVideo.ml
  SSO.ml
  EKS.ml
  Route53RecoveryControl.ml
  RDS.ml
  IoTFleetHub.ml
  LookoutMetrics.ml
  Forecast.ml
  ImageBuilder.ml
  NimbleStudio.ml
  M2.ml
  QuickSight.ml
  CodeCommit.ml
  Detective.ml
  SQS.ml
  CodeStarConnections.ml
  SSMIncidents.ml
  ElasticLoadBalancingV2.ml
  RefactorSpaces.ml
  Backup.ml
  Budgets.ml
  Panorama.ml
  Route53RecoveryReadiness.ml
  Pipes.ml
  Macie.ml
  SimSpaceWeaver.ml
  Lightsail.ml
  RolesAnywhere.ml
  CloudWatch.ml
  CodeGuruProfiler.ml
  DataPipeline.ml
  ResilienceHub.ml
  Timestream.ml
  AppMesh.ml
  IAM.ml
  S3.ml
  AppSync.ml
  ApplicationInsights.ml
  SecretsManager.ml
  CodeStarNotifications.ml
  VpcLattice.ml
  FinSpace.ml
  Lex.ml
  AppIntegrations.ml
  ConnectCampaigns.ml
  SNS.ml
  AppStream.ml
  GuardDuty.ml
  IdentityStore.ml
  LookoutVision.ml
  RUM.ml
  IoT1Click.ml
  MWAA.ml
  SSM.ml
  AccessAnalyzer.ml
  EMR.ml
  IVSChat.ml
  AutoScalingPlans.ml
  Route53.ml
  ServiceDiscovery.ml
  Connect.ml
  DynamoDB.ml
  FIS.ml
  InternetMonitor.ml
  HealthLake.ml
  NetworkManager.ml
  OpenSearchService.ml
  VoiceID.ml
  Chatbot.ml
  CodeBuild.ml
  MemoryDB.ml
  ACMPCA.ml
  DataBrew.ml
  Config.ml
  FraudDetector.ml
  Kendra.ml
  CUR.ml
  CodeStar.ml
  EventSchemas.ml
  IoTEvents.ml
  KinesisAnalyticsV2.ml
  MSK.ml
  XRay.ml
  ApiGatewayV2.ml
  AutoScaling.ml
  EMRContainers.ml
  CertificateManager.ml
  EFS.ml
  IVS.ml
  Wisdom.ml
  DirectoryService.ml
  Elasticsearch.ml
  GreengrassV2.ml
  CustomerProfiles.ml
  ResourceGroups.ml
  RoboMaker.ml
  DevOpsGuru.ml
  Redshift.ml
  FSx.ml
  MediaPackage.ml
  ApiGateway.ml
  AmplifyUIBuilder.ml; recursive types not handled in from_yojson_to converters
  BillingConductor.ml
  KMS.ml
  ResourceExplorer2.ml
  CloudFormation.ml
  Events.ml
  SSMContacts.ml
  OpsWorksCM.ml
  ServiceCatalog.ml
  IoTAnalytics.ml
  IoTThingsGraph.ml
  RedshiftServerless.ml
  ECS.ml
  IoTCoreDeviceAdvisor.ml
  ElasticBeanstalk.ml
  SystemsManagerSAP.ml
  WAFRegional.ml
  KafkaConnect.ml
  CodePipeline.ml
  DLM.ml
  WAF.ml
  CodeDeploy.ml
  Cloud9.ml
  Neptune.ml
  Greengrass.ml
  AmazonMQ.ml
  CloudTrail.ml
  ElastiCache.ml
  ; Alexa
  ASK.ml
 )
 (deps
  (sandbox always)
  (:jsonfiles
   (glob_files "../definitions/*.json")))
 (action
  (run ./write_specs.exe %{jsonfiles})))

(library
 (name cf_aws)
 (modules
  Cf_aws
  ApplicationAutoScaling
  ECR
  Location
  ServiceCatalogAppRegistry
  Lambda
  OpenSearchServerless
  FMS
  LakeFormation
  MediaConnect
  KendraRanking
  MediaLive
  Transfer
  Comprehend
  Batch
  Amplify
  IoTFleetWise
  S3ObjectLambda
  Signer
  IoTWireless
  AppConfig
  DocDBElastic
  IoT
  Cognito
  EMRServerless
  Grafana
  MediaConvert
  StepFunctions
  Synthetics
  KinesisAnalytics
  ControlTower
  DMS
  ElasticLoadBalancing
  Logs
  SES
  DAX
  IoTTwinMaker
  OpsWorks
  GroundStation
  ManagedBlockchain
  Personalize
  AppFlow
  CodeArtifact
  CloudFront
  Omics
  Scheduler
  SupportApp
  CodeGuruReviewer
  LicenseManager
  SecurityHub
  AppRunner
  IoTSiteWise
  Inspector
  SageMaker
  CE
  MediaTailor
  Athena
  QLDB
  S3Outposts
  GlobalAccelerator
  Kinesis
  Route53Resolver
  RAM
  APS
  Cassandra
  Organizations
  KinesisFirehose
  MediaStore
  WorkSpaces
  EC2
  LookoutEquipment
  GameLift
  Pinpoint
  WAFv2
  DataSync
  Glue
  Evidently
  Oam
  Rekognition
  NetworkFirewall
  SDB
  DocDB
  PinpointEmail
  AuditManager
  InspectorV2
  KinesisVideo
  SSO
  EKS
  Route53RecoveryControl
  RDS
  IoTFleetHub
  LookoutMetrics
  Forecast
  ImageBuilder
  NimbleStudio
  M2
  QuickSight
  CodeCommit
  Detective
  SQS
  CodeStarConnections
  SSMIncidents
  ElasticLoadBalancingV2
  RefactorSpaces
  Backup
  Budgets
  Panorama
  Route53RecoveryReadiness
  Pipes
  Macie
  SimSpaceWeaver
  Lightsail
  RolesAnywhere
  CloudWatch
  CodeGuruProfiler
  DataPipeline
  ResilienceHub
  Timestream
  AppMesh
  IAM
  S3
  AppSync
  ApplicationInsights
  SecretsManager
  CodeStarNotifications
  VpcLattice
  FinSpace
  Lex
  AppIntegrations
  ConnectCampaigns
  SNS
  AppStream
  GuardDuty
  IdentityStore
  LookoutVision
  RUM
  IoT1Click
  MWAA
  SSM
  AccessAnalyzer
  EMR
  IVSChat
  AutoScalingPlans
  Route53
  ServiceDiscovery
  Connect
  DynamoDB
  FIS
  InternetMonitor
  HealthLake
  NetworkManager
  OpenSearchService
  VoiceID
  Chatbot
  CodeBuild
  MemoryDB
  ACMPCA
  DataBrew
  Config
  FraudDetector
  Kendra
  CUR
  CodeStar
  EventSchemas
  IoTEvents
  KinesisAnalyticsV2
  MSK
  XRay
  ApiGatewayV2
  AutoScaling
  EMRContainers
  CertificateManager
  EFS
  IVS
  Wisdom
  DirectoryService
  Elasticsearch
  GreengrassV2
  CustomerProfiles
  ResourceGroups
  RoboMaker
  DevOpsGuru
  Redshift
  FSx
  MediaPackage
  ApiGateway
  AmplifyUIBuilder
  BillingConductor
  KMS
  ResourceExplorer2
  CloudFormation
  Events
  SSMContacts
  OpsWorksCM
  ServiceCatalog
  IoTAnalytics
  IoTThingsGraph
  RedshiftServerless
  ECS
  IoTCoreDeviceAdvisor
  ElasticBeanstalk
  SystemsManagerSAP
  WAFRegional
  KafkaConnect
  CodePipeline
  DLM
  WAF
  CodeDeploy
  Cloud9
  Neptune
  Greengrass
  AmazonMQ
  CloudTrail
  ElastiCache
  )
 (libraries cf_base ppx_deriving ppx_yojson_conv)
 )

(library
 (name cf_alexa)
 (modules Cf_alexa ASK)
 (libraries cf_base ppx_deriving ppx_yojson_conv) )
